log

Thu 14 Mar 2024 08:38:15 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
f06b1d8
Thu 14 Mar 2024 08:41:20 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:25:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   25 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
dfeffb8
Thu 14 Mar 2024 08:41:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d992373
Thu 14 Mar 2024 08:44:17 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7ab24ac
Thu 14 Mar 2024 08:45:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   34 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
bf056be
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8eb63ec
Thu 14 Mar 2024 08:47:20 PM UTC: 
 exercises.c | 20 ++++++++------------
 1 file changed, 8 insertions(+), 12 deletions(-)
 tests:  0|6
total_score: 10/70
b5308a0
Thu 14 Mar 2024 08:48:28 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:47: error: expected ‘;’ before ‘)’ token
   32 |   for (int i = 0, k = size - 1; i < (size / 2))
      |                                               ^
      |                                               ;
Compilation failed
4c8d348
Thu 14 Mar 2024 08:48:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
1abf887
Thu 14 Mar 2024 08:49:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
65699f9
Thu 14 Mar 2024 08:56:53 PM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|0
f7968d0
Thu 14 Mar 2024 08:57:27 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 30/70
d3a3a9d
Thu 14 Mar 2024 09:02:41 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:77:23: error: ‘j’ undeclared (first use in this function)
   77 |   while (i < size1 && j < size1)
      |                       ^
exercises.c:77:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:76:21: error: unused variable ‘a’ [-Werror=unused-variable]
   76 |   int i = 0, k = 0, a = 0;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
5e856db
Thu 14 Mar 2024 09:02:50 PM UTC: 
 exercises.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  0|4
total_score: 30/70
50b680b
Thu 14 Mar 2024 09:06:43 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:77:23: error: ‘j’ undeclared (first use in this function)
   77 |   while (i < size1 && j < size1)
      |                       ^
exercises.c:77:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:76:21: error: unused variable ‘a’ [-Werror=unused-variable]
   76 |   int i = 0, k = 0, a = 0;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
bdc721b
Thu 14 Mar 2024 09:08:33 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:77:23: error: ‘j’ undeclared (first use in this function)
   77 |   while (i < size1 && j < size1)
      |                       ^
exercises.c:77:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
14fc19e
Thu 14 Mar 2024 09:08:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
79caa4f
Thu 14 Mar 2024 09:09:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1b2cc2a
Thu 14 Mar 2024 09:09:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
5bdef7f
Thu 14 Mar 2024 09:11:09 PM UTC: 
 exercises.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  0|4
total_score: 30/70
0cf80f5
Fri 15 Mar 2024 08:03:34 PM UTC: 
 exercises.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 30/70
aeca4c6
Fri 15 Mar 2024 08:03:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3bc33af
Fri 15 Mar 2024 08:04:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
a5fac26
Fri 15 Mar 2024 08:07:06 PM UTC: 
 exercises.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|5
total_score: 20/70
5394718
Fri 15 Mar 2024 08:07:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:33: error: ‘k’ undeclared (first use in this function)
   52 |   for(int i = 0; i < size; i++, k--)
      |                                 ^
exercises.c:52:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
644655b
Fri 15 Mar 2024 08:08:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
4c257f6
Fri 15 Mar 2024 08:11:41 PM UTC: 
 exercises.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|3
total_score: 40/70
1a252e5
Fri 15 Mar 2024 08:21:40 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
04b49ee
Fri 15 Mar 2024 08:22:58 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
fa52a72
Fri 15 Mar 2024 08:23:29 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
8eed0a7
Fri 15 Mar 2024 08:25:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
9eb35b3
Fri 15 Mar 2024 08:25:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
3ff4f7c
Fri 15 Mar 2024 08:27:20 PM UTC: 
 exercises.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
 tests:  0|3
total_score: 40/70
a50fa02
Fri 15 Mar 2024 08:27:39 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
0cfb9fa
Fri 15 Mar 2024 08:28:09 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
009a54c
Fri 15 Mar 2024 08:30:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
f76bdee
Fri 15 Mar 2024 08:30:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
b4ff574
Fri 15 Mar 2024 08:30:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
f783ca2
Fri 15 Mar 2024 08:43:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
4bbb481
